Cria módulo de cartão de crédito
