# backend/src/modules/compras/routes.js
@@ -1,8 +1,11 @@
 import express from 'express';
-import comprassActions from './actions';
+import comprasActions from './actions';
+import authUtils from "../../utils/auth"
 
 const router = express.Router();
 
-router.post('/compras', comprassActions.create);
+router.post('/compras', authUtils.verifyAuth, comprasActions.create);
+router.get('/compras', authUtils.verifyAuth, comprasActions.index);
+router.get('/compras/:id', authUtils.verifyAuth, comprasActions.read);
 
 export default router;
