# backend/swagger_output.json
@@ -7,20 +7,7 @@
   },
   "host": "localhost:3020",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "Usuarios",
-      "description": "Rotas de usuários com persistência no banco."
-    },
-    {
-      "name": "Produtos",
-      "description": "CRUD de produtos com banco de dados."
-    },
-    {
-      "name": "Compras",
-      "description": "Criação de compras com banco de dados."
-    }
-  ],
+  "tags": [],
   "schemes": [
     "http"
   ],
@@ -426,7 +413,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
+                "enderecoId": {
+                  "example": "any"
+                },
+                "cartaoId": {
                   "example": "any"
                 },
                 "produtos": {
@@ -439,6 +429,124 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Compras"
+        ],
+        "summary": "Retorna uma lista com todas as compras do usuário logado",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/compras/{id}": {
+      "get": {
+        "tags": [
+          "Compras"
+        ],
+        "summary": "Retorna os dados de uma compra do usuário logado.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/cartao": {
+      "post": {
+        "tags": [
+          "Cartao"
+        ],
+        "summary": "Cria um novo cartão para o usuário logado.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "number": {
+                  "example": "any"
+                },
+                "apelido": {
+                  "example": "any"
+                },
+                "validade": {
+                  "example": "any"
+                },
+                "cvv": {
+                  "example": "any"
+                },
+                "titular": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Cartao"
+        ],
+        "summary": "Retorna uma lista com todos os cartões do usuário logado",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
